[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = []
exclude = [
    "/.gitignore",
    "/tests",
    "/examples",
    "/requirements.txt",
    "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orca_whirlpool"]

[project]
name = "whirlpool-essentials"
version = "0.1.0"
authors = [
    { name="yugure", email="yugure@orca.so" },
]
description = "A core library to interact with Orca Whirlpool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/everlastingsong/whirlpool-essentials"
Documentation = "https://everlastingsong.github.io/whirlpool-essentials/orca_whirlpool/index.html"
Issues = "https://github.com/everlastingsong/whirlpool-essentials/issues"
